spacing fixes

--- a/styles/main.css
+++ b/styles/main.css
@@ -1233,7 +1233,7 @@ span {
     letter-spacing: .2rem;
 }
 .discipline-intro {
-    margin: 3rem 6rem 3rem 6rem;
+    margin: 3rem 10rem 3rem 10rem;
 }
 
 
